--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
+        "@flydotio/dockerfile": "^0.7.10",
         "@tailwindcss/postcss": "^4.1.8",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
